added adaptive design

--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
           <img src="./images/profile-image.jpg" alt="" class="profile__img">
         </div>
         <div class="profile__info">
-          <h1 class="profile__title">Жак-Ив Кусто</h1>
-          <button class="profile__edit">
-            <img src="./images/button-edit.svg" alt="">
-          </button>
+          <div class="profile__title-info">
+            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <button class="profile__edit">
+              <img src="./images/button-edit.svg" alt="">
+            </button>
+          </div>
+          <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <p class="profile__subtitle">Исследователь океана</p>
         <button class="profile__add">
           <img src="./images/button-plus.svg" alt="">
         </button>
