--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
   <div class="page">
 
     <section class="form">
-      <form class="form__container">
-        <span class="form__close-btn">
+      <form class="form__popup">
+        <span class="form__close-btn button">
           <img src="./images/button-plus.svg" alt="" class="form__close-icon">
         </span>
         <h2 class="form__heading">Редактировать профиль</h2>
         <fieldset class="form__input-container">
           <input type="text" class="form__item" id="name">
           <input type="text" class="form__item" id="description">
-          <input type="submit" class="form__submit form__submit-text" value="Сохранить">
+          <input type="submit" class="button form__submit form__submit-text" value="Сохранить">
         </fieldset>
       </form>
     </section>
@@ -30,7 +30,6 @@
     </header>
 
     <main class="content">
-
       <section class="profile">
         <div class="profile__avatar">
           <img src="./images/profile-image.jpg" alt="" class="profile__img">
@@ -38,13 +37,13 @@
         <div class="profile__info">
           <div class="profile__title-info">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
-            <button class="profile__edit">
+            <button class="profile__edit button">
               <img src="./images/button-edit.svg" alt="">
             </button>
           </div>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <button class="profile__add">
+        <button class="profile__add button">
           <img src="./images/button-plus.svg" alt="">
         </button>
       </section>
@@ -55,65 +54,52 @@
             <img src="./images/karach.jpg" alt="" class="element__img">
             <div class="element__info">
               <h2 class="element__title">Карачаево-Черкессия</h2>
-              <button class="element__like">
-                <img src="./images/like-img.svg" alt="">
-              </button>
+              <button class="element__like button"></button>
             </div>
           </li>
           <li class="element">
             <img src="./images/elbrus.jpg" alt="" class="element__img">
             <div class="element__info">
               <h2 class="element__title">Гора Эльбрус</h2>
-              <button class="element__like">
-                <img src="./images/like-img.svg" alt="">
-              </button>
+              <button class="element__like button"></button>
             </div>
           </li>
           <li class="element">
             <img src="./images/dombay.png" alt="" class="element__img">
             <div class="element__info">
               <h2 class="element__title">Домбай</h2>
-              <button class="element__like">
-                <img src="./images/like-img.svg" alt="">
-              </button>
+              <button class="element__like button"></button>
             </div>
           </li>
           <li class="element">
             <img src="./images/elbrus.jpg" alt="" class="element__img">
             <div class="element__info">
               <h2 class="element__title">Гора Эльбрус</h2>
-              <button class="element__like">
-                <img src="./images/like-img.svg" alt="">
-              </button>
+              <button class="element__like button"></button>
             </div>
           </li>
           <li class="element">
             <img src="./images/dombay.png" alt="" class="element__img">
             <div class="element__info">
               <h2 class="element__title">Домбай</h2>
-              <button class="element__like">
-                <img src="./images/like-img.svg" alt="">
-              </button>
+              <button class="element__like button"></button>
             </div>
           </li>
           <li class="element">
             <img src="./images/karach.jpg" alt="" class="element__img">
             <div class="element__info">
               <h2 class="element__title">Карачаево-Черкессия</h2>
-              <button class="element__like">
-                <img src="./images/like-img.svg" alt="">
-              </button>
+              <button class="element__like button"></button>
             </div>
           </li>
         </ul>
       </section>
-
     </main>
+
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
   </div>
   <script src="./scripts/index.js"></script>
 </body>
-
 </html>
