--- a/index.html
+++ b/index.html
@@ -11,20 +11,6 @@
 <body>
   <div class="page">
 
-    <section class="form">
-      <form class="form__popup">
-        <span class="form__close-btn button">
-          <img src="./images/button-plus.svg" alt="" class="form__close-icon">
-        </span>
-        <h2 class="form__heading">Редактировать профиль</h2>
-        <fieldset class="form__input-container">
-          <input type="text" class="form__item" id="name">
-          <input type="text" class="form__item" id="description">
-          <input type="submit" class="button form__submit form__submit-text" value="Сохранить">
-        </fieldset>
-      </form>
-    </section>
-
     <header class="header">
       <img class="header__logo" src="./images/logo-mesto.svg" alt="Логотип">
     </header>
@@ -32,61 +18,61 @@
     <main class="content">
       <section class="profile">
         <div class="profile__avatar">
-          <img src="./images/profile-image.jpg" alt="" class="profile__img">
+          <img src="./images/profile-image.jpg" alt="Фото автора" class="profile__img">
         </div>
         <div class="profile__info">
           <div class="profile__title-info">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
             <button class="profile__edit button">
-              <img src="./images/button-edit.svg" alt="">
+              <img src="./images/button-edit.svg" alt="Редактировать профиль" class="profile__edit-img">
             </button>
           </div>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
         <button class="profile__add button">
-          <img src="./images/button-plus.svg" alt="">
+          <img src="./images/button-plus.svg" alt="Добавить новое место" class="profile__add-img">
         </button>
       </section>
 
       <section class="elements">
         <ul class="elements__list">
           <li class="element">
-            <img src="./images/karach.jpg" alt="" class="element__img">
+            <img src="./images/karach.jpg" alt="Карачаево-Черкессия" class="element__img">
             <div class="element__info">
               <h2 class="element__title">Карачаево-Черкессия</h2>
               <button class="element__like button"></button>
             </div>
           </li>
           <li class="element">
-            <img src="./images/elbrus.jpg" alt="" class="element__img">
+            <img src="./images/elbrus.jpg" alt="Гора Эльбрус" class="element__img">
             <div class="element__info">
               <h2 class="element__title">Гора Эльбрус</h2>
               <button class="element__like button"></button>
             </div>
           </li>
           <li class="element">
-            <img src="./images/dombay.png" alt="" class="element__img">
+            <img src="./images/dombay.png" alt="Домбай" class="element__img">
             <div class="element__info">
               <h2 class="element__title">Домбай</h2>
               <button class="element__like button"></button>
             </div>
           </li>
           <li class="element">
-            <img src="./images/elbrus.jpg" alt="" class="element__img">
+            <img src="./images/elbrus.jpg" alt="Гора Эльбрус" class="element__img">
             <div class="element__info">
               <h2 class="element__title">Гора Эльбрус</h2>
               <button class="element__like button"></button>
             </div>
           </li>
           <li class="element">
-            <img src="./images/dombay.png" alt="" class="element__img">
+            <img src="./images/dombay.png" alt="Домбай" class="element__img">
             <div class="element__info">
               <h2 class="element__title">Домбай</h2>
               <button class="element__like button"></button>
             </div>
           </li>
           <li class="element">
-            <img src="./images/karach.jpg" alt="" class="element__img">
+            <img src="./images/karach.jpg" alt="Карачаево-Черкессия" class="element__img">
             <div class="element__info">
               <h2 class="element__title">Карачаево-Черкессия</h2>
               <button class="element__like button"></button>
@@ -99,6 +85,20 @@
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
+
+    <section class="form">
+      <form class="form__popup">
+        <span class="form__close-btn button">
+          <img src="./images/button-plus.svg" alt="Закрыть" class="form__close-icon">
+        </span>
+        <h2 class="form__heading">Редактировать профиль</h2>
+        <fieldset class="form__input-container">
+          <input type="text" class="form__item" id="name">
+          <input type="text" class="form__item" id="description">
+          <input type="submit" class="button form__submit form__submit-text" value="Сохранить">
+        </fieldset>
+      </form>
+    </section>
   </div>
   <script src="./scripts/index.js"></script>
 </body>
