feat: display image popup

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
     </section>
 
-    <section class="popup image-popup">
+    <section class="popup image-popup popup_opacity_dark">
       <div class="popup__image-container">
         <button type="button" class="popup__close-btn button"></button>
         <figure class="popup__figure">
