--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="popup__image-container">
         <button type="button" class="popup__close-btn button"></button>
         <figure class="popup__figure">
-          <img src="" alt="" class="popup__image">
+          <img src="./images/no-image.gif" alt="Изображение отсуствует" class="popup__image">
           <figcaption class="popup__image-caption"></figcaption>
         </figure>
       </div>
@@ -80,7 +80,7 @@
 
   <template id="card-template">
     <li class="element">
-      <img class="element__img">
+      <img src="./images/no-image.gif" alt="Изображение отсуствует" class="element__img">
       <button type="button" class="element__delete button"></button>
       <div class="element__info">
         <h2 class="element__title"></h2>
