--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="popup__container">
         <button type="button" class="popup__close-btn button"></button>
         <h2 class="popup__heading">Редактировать профиль</h2>
-        <form class="form" name="edit-profile">
+        <form class="form" name="edit-profile" novalidate>
           <fieldset class="form__input-container">
             <input type="text" id="name-input" class="form__item form__item_el_name" name="name" minlength="2" maxlength="40" required>
             <span class="form__item-error name-input-error"></span>
@@ -59,13 +59,13 @@
       <div class="popup__container">
         <button type="button" class="popup__close-btn button"></button>
         <h2 class="popup__heading">Новое место</h2>
-        <form class="form" name="add-profile">
+        <form class="form " name="add-profile" novalidate>
           <fieldset class="form__input-container">
             <input type="text" id="place-input" class="form__item form__item_el_name" name="name" placeholder="Название" minlength="2" maxlength="30" required>
             <span class="form__item-error place-input-error"></span>
             <input type="url" id="link-input" class="form__item form__item_el_link" name="link" placeholder="Ссылка на картинку" required>
             <span class="form__item-error link-input-error"></span>
-            <button type="submit" class="button form__submit">Сохранить</button>
+            <button type="submit" class="button form__submit">Создать</button>
           </fieldset>
         </form>
       </div>
