--- a/src/index.html
+++ b/src/index.html
@@ -17,14 +17,14 @@
     <main class="content">
       <section class="profile">
         <div class="profile__avatar">
-          <img src="<%=require('./images/profile-image.jpg')%>"  alt="Фото автора" class="profile__img">
+          <img alt="Фото автора" class="profile__img">
         </div>
         <div class="profile__info">
           <div class="profile__title-info">
-            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <h1 class="profile__title"></h1>
             <button type="button" class="profile__edit button"></button>
           </div>
-          <p class="profile__subtitle">Исследователь океана</p>
+          <p class="profile__subtitle"></p>
         </div>
         <button type="button" class="profile__add button"></button>
       </section>
