feat: add card functionality

--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,7 @@
         <h2 class="element__title"></h2>
         <div class="element__like-block">
           <button type="button" class="element__like button"></button>
-          <span class="element__like-number">1233</span>
+          <span class="element__like-number"></span>
         </div>
       </div>
     </li>
